# spimag

./: .env.example  .gitattributes  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION.md  COMPLETION.txt  COMPLETION_CERTIFICATE.txt  CONTRIBUTING.md  DEPLOY.md  DESCRIPTION.md  Dockerfile  INSTALL.md  INSTALLATION.md  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  fix_test_imports.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
config/: spimag.default.yaml
configs/: ai_config.yaml  alert_thresholds.yaml  smni_weights.yaml  species_config.yaml
docs/: SPIMAG_Research_Paper.docx  framework_overview.md  parameter_reference.md
reports/daily/: 2026-03-01_daily_report.md  2026-03-01_daily_report.txt
scripts/: export_dashboard.py  generate_alerts.py  generate_reports.py  ingest_species_data.py  monitor_storm.py  run_smni_batch.py
src/spimag/src/spimag/smni/parameters/: omega_dipole.py
src/spimag/src/spimag/src/spimag/src/spimag/smni/parameters/: gamma_coh.py
src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/smni/parameters/: v_nav.py
src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/reporting/: dashboard_exporter.py
src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/: setup.py
src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/preprocessing/: harmonic_regression.py
src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/ai/: cnn_spatial.py  ensemble.py
src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/ai/: xgboost_classifier.py
src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/ai/: pi_qnn.py
src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/smni/parameters/: theta_inc.py
src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/smni/parameters/: de_zeeman.py
src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/detection/: precursor_sequencer.py
src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/preprocessing/: background_modeling.py
src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/smni/parameters/: chi_para.py
src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/detection/: rf_disruption.py
src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/quantum/: zeeman_hamiltonian.py
src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/spimag/src/reporting/: alert_notifier.py
tests/: run_all_tests.py
tests/fixtures/: sample_data.json
tests/hypothesis/: test_h1_smni_accuracy.py  test_h2_coherence_threshold.py
tests/integration/: test_quantum_ai_integration.py  test_smni_pipeline.py
tests/unit/ai/: test_cnn.py  test_ensemble.py  test_lstm.py  test_pi_qnn.py  test_xgboost.py
tests/unit/parameters/: test_chi_para.py  test_de_zeeman.py  test_gamma_coh.py  test_omega_dipole.py  test_p_singlet.py  test_s_yield.py  test_theta_inc.py  test_v_nav.py
tests/unit/quantum/: test_hyperfine.py  test_stochastic_liouville.py
