[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "spimag"
dynamic = ["version"]
description = "SPIMAG: Spin-Induced Magnetic Alignment & Geospatial Intelligence"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Samir Baladi", email = "gitdeeper@gmail.com"},
]
keywords = [
    "quantum-biology",
    "cryptochrome",
    "magnetoreception",
    "radical-pair-mechanism",
    "spin-dynamics",
    "zeeman-effect",
    "quantum-coherence",
    "avian-navigation",
    "biogenic-magnetite",
    "hyperfine-interaction",
    "quantum-zeno-effect",
    "bio-inspired-sensors",
    "geomagnetic-storms",
    "machine-learning",
    "quantum-neural-networks",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Homepage = "https://spimag.netlify.app"
Documentation = "https://spimag.readthedocs.io"
Repository = "https://gitlab.com/gitdeeper07/spimag"
"Bug Tracker" = "https://gitlab.com/gitdeeper07/spimag/-/issues"
DOI = "https://doi.org/10.14293/SPIMAG.2026.001"
API = "https://spimag.netlify.app/api"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["spimag"]

[tool.setuptools_scm]
write_to = "src/spimag/_version.py"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["spimag"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "except ImportError:",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line too long (handled by black)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101", "B301", "B403"]
