# ⚛️ SPIMAG setup.cfg
# Spin-Induced Magnetic Alignment & Geospatial Intelligence

[metadata]
name = spimag
version = 1.0.0
url = https://spimag.netlify.app
project_urls =
    Documentation = https://spimag.readthedocs.io
    Source = https://gitlab.com/gitdeeper07/spimag
    GitHub = https://github.com/gitdeeper07/spimag
    Bug Tracker = https://gitlab.com/gitdeeper07/spimag/-/issues
    DOI = https://doi.org/10.14293/SPIMAG.2026.001
    API = https://spimag.netlify.app/api
author = Samir Baladi
author_email = gitdeeper@gmail.com
maintainer = Samir Baladi
maintainer_email = gitdeeper@gmail.com
license = MIT
license_file = LICENSE
description = SPIMAG: Spin-Induced Magnetic Alignment & Geospatial Intelligence
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    quantum-biology,
    cryptochrome,
    magnetoreception,
    radical-pair-mechanism,
    spin-dynamics,
    zeeman-effect,
    quantum-coherence,
    avian-navigation,
    biogenic-magnetite,
    hyperfine-interaction,
    quantum-zeno-effect,
    bio-inspired-sensors,
    geomagnetic-storms,
    machine-learning,
    quantum-neural-networks
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0
    pandas>=1.3.0
    xarray>=2022.3.0
    qutip>=4.7.0
    sympy>=1.10.0
    scikit-learn>=1.0.0
    xgboost>=1.6.0
    matplotlib>=3.5.0
    seaborn>=0.11.0
    plotly>=5.5.0
    requests>=2.27.0
    pyyaml>=5.4.0
    click>=8.0.0
    python-dotenv>=0.19.0

[options.packages.find]
where = src
exclude =
    tests
    docs
    examples
    notebooks
    scripts

[options.extras_require]
ml =
    tensorflow>=2.8.0
    torch>=1.10.0
    pytorch-lightning>=1.6.0
quantum =
    pyscf>=2.0.0
    openfermion>=1.0.0
    cirq>=0.13.0
viz =
    streamlit>=1.15.0
    plotly>=5.5.0
    dash>=2.0.0
    folium>=0.14.0
web =
    flask>=2.0.0
    flask-cors>=3.0.0
    flask-restful>=0.3.9
    fastapi>=0.85.0
    uvicorn>=0.18.0
    gunicorn>=20.1.0
geo =
    geopandas>=0.10.0
    shapely>=1.8.0
    rasterio>=1.3.0
    pyproj>=3.3.0
field =
    pyserial>=3.5
    pymodbus>=3.0.0
    minimalmodbus>=2.0.0
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=22.0.0
    ruff>=0.0.260
    mypy>=0.990
    pre-commit>=2.20.0
    mkdocs>=1.4.0
    mkdocs-material>=9.0.0
    mkdocstrings>=0.20.0
    sphinx>=5.0.0
    sphinx-rtd-theme>=1.0.0
all =
    %(ml)s
    %(quantum)s
    %(viz)s
    %(web)s
    %(geo)s
    %(field)s
    %(dev)s

[options.entry_points]
console_scripts =
    spimag = spimag.cli.main:cli

[bdist_wheel]
universal = 0

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
strict_optional = True

[coverage:run]
source = spimag
omit = */tests/*,*/test_*.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if __name__ == .__main__.:
    raise AssertionError
    raise NotImplementedError

[aliases]
test = pytest

# ⚛️ Inside the eye of a migrating robin, two electrons are entangled. SPIMAG decodes.
